<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:background="@drawable/wwwwww"
    android:layout_height="match_parent"
    android:clipToPadding="false"
    android:overScrollMode="never"
    android:padding="24dp"
    android:scrollbars="none"
    tools:context=".activities.SignInActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/welcome_back"
            android:textColor="@color/primary_text"
            android:textSize="25sp"
            android:textStyle="bold">

        </TextView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="1sp"
            android:text="@string/login_to_continue"
            android:textColor="@color/secondary_text"
            android:textSize="20sp"
            android:textStyle="bold">

        </TextView>

        <EditText
            android:id="@+id/inputEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50sp"
            android:background="@drawable/background_input"
            android:drawableLeft="@drawable/baseline_email_24"
            android:drawablePadding="20dp"
            android:hint="@string/email"
            android:textColorHint="@color/design_default_color_on_secondary"
            android:imeOptions="actionNext"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:textColor="@color/design_default_color_on_secondary"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/inputPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20sp"
            android:background="@drawable/background_input"
            android:drawableLeft="@drawable/password"
            android:drawablePadding="20dp"
            android:hint="@string/password"
            android:textColorHint="@color/design_default_color_on_secondary"
            android:imeOptions="actionDone"
            android:importantForAutofill="no"
            android:inputType="textPassword"
            android:minHeight="48dp"
            android:paddingStart="16sp"
            android:paddingEnd="16sp"
            android:textColor="@color/primary_text"
            android:textSize="20sp" />

<!--        <CheckBox-->
<!--            android:id="@+id/CheCkbox"-->
<!--            android:layout_width="match_parent"-->
<!--            android:layout_height="wrap_content"-->
<!--            android:layout_gravity="center"-->
<!--            android:layout_marginStart="10dp"-->
<!--            android:layout_marginTop="@dimen/_2sdp"-->
<!--            android:paddingStart="0dp"-->
<!--            android:paddingEnd="0dp"-->
<!--            android:text="@string/show_password"-->
<!--            android:textColor="@color/material_dynamic_neutral0"-->

<!--            />-->

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_20sdp"
            android:animateLayoutChanges="true">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/buttonSignIn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in"
                android:textColor="@color/input_background"
                android:textSize="15sp"
                android:textStyle="bold"
                app:cornerRadius="10sp" />

            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="@dimen/_20sdp"
                android:layout_height="@dimen/_25sdp"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </FrameLayout>

        <TextView
            android:id="@+id/textCreateNewAccount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:text="@string/create_a_new_account"
            android:textColor="@color/primary"
            android:textSize="15sp"
            android:textStyle="bold" />
    </LinearLayout>

</ScrollView>